--- a/about/index.html
+++ b/about/index.html
@@ -16,7 +16,7 @@ It makes use of a variety of open source projects including:
 
     <title>
         
-            About :: Hello Friend NG  — Hello I&#39;m QuyetVV
+            About :: Blogs QuyetVV  — Hello I&#39;m QuyetVV
         
     </title>
 
