--- a/fr/404.html
+++ b/fr/404.html
@@ -14,7 +14,7 @@
 
     <title>
         
-            404 Page not found :: Hello Friend NG  — Hello I&#39;m QuyetVV
+            404 Page not found :: Blogs QuyetVV  — Hello I&#39;m QuyetVV
         
     </title>
 
