--- a/series/index.html
+++ b/series/index.html
@@ -14,7 +14,7 @@
 
     <title>
         
-            Series :: Hello Friend NG  — Hello I&#39;m QuyetVV
+            Series :: Blogs QuyetVV  — Hello I&#39;m QuyetVV
         
     </title>
 
@@ -66,7 +66,7 @@
 
 
 
-<link rel="alternate" type="application/rss+xml" href="https://QuyetVV1995.github.io/series/index.xml" title="Hello Friend NG" />
+<link rel="alternate" type="application/rss+xml" href="https://QuyetVV1995.github.io/series/index.xml" title="Blogs QuyetVV" />
 
 
 
